tooling/nargo_cli/tests/snapshots/execution_success/reference_counts_inliner_max/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+2ZS4/aMBDH7SU8El5Z2LZ8gb0HAoTeOCyH9lukS5F6qaqqUi+ttB+9jepJzHS2HPiPNtCMhPKw+c3D9sSZWFNJ5I6BO96Y52Xrjsl5MldkJyXwShxKr82h5bU5tG4cqrlD2ZFD9vId2hw5ZC7foWYN1d2hKm1bz6lTQk6/d8eQ3S9YLWAAQo+L5m+S5Tpk/oHtT0OPqcBfhGz8wPyk6zgPT8d8w/S2WD/+n0KG7tyav/tQm7+odq6t9/s3MtX52J2HjKcxN3yb0LGdCvaTrr7z9YH56sfewmzJPkjzCMdflPO0rcJfl/Z3dPhvid/V4X8kfk+HvyR+qMJPc+JHOvaXa7Gvw18Rf6DDfyT+UIWf7Sl/Up4kHcZUuWPs3cflsfncMn3GHOcpw/RHzFb0nsEyfWQPjw/lWopdLNgaC208B8eCnljQI7ECIKsNZHWArC6Q1QOykLEPa2pXBGQh50QfyBoAWXWdX/TckPaBhWzdMTlTLLPdt1XKnUXsKe98+frp8zfDxAdZz2C6vmFtgRcEv1/rGZ45wbcCq5BiAtKiDZ6O9Wzd/eQMyTZ/gllIy/HbpvLDl8Br9/u/c9f+IqZjcIadhyyfH9L8kK/y/X75mE8YvxD/ReSnO29e9v8pzcu+qcaO+uy8PjvGPacgQBu04pzW9/9QEPjOfG0KApI0BYET/AsvCGQr3YJAlioXBDLdgkBV0BjpxGcpFRWA/DI/xCr8RVmQudWxvxzfic74bog/VeGn5fy/0+GX4/tKJ/5lQey1qYSeq6T7jXcf9xxfrC3TZ4xcECP9EbMVva+2TB/Zw+PDC2IzwdZYaON7kJmgZybokVgBkNUGsjpAVhfI6gFZyNiHNbUrArKQ49gHspBzdQBkIeM1BLKQa6iueWIEZCFjj5xfSLvGQBYyf8U1tesWyEKuIeTaRq6hCZBV1+f2FMi6A7LoneMlP6ZI+261jyn3rN+pjynWM9QKOu+F/13CB5Uf7vqlP6j8AnIYlTqwMQAA",
  "debug_symbols": "7ZnBbhshEIbfZc85MAwDQ16liiIn2VaWLCdy7UpVlHcv6x9oqwq0WuJbL57YznyGn5lhFt6nl/np8u1xf/z6+n26//I+PZ32h8P+2+Ph9Xl33r8e06fvk1leyE/3dDdRgFGYeDXWwBCMhWEYByMwoFhQLCgWFAaFQWFQGBQGhUFhUBgUBoVBcaA4UBwoDhQHigPFgeJAcaA4UAQUAUVAEVAEFAFFQBFQBBQBxYPiQfGgeFB8othkBCZR7EcS9Cr1f40/T2OCxgSNFwOKB8WDEkAJoARQAigBlABKACWAEkAJoCgoCoqCoqAoKAqKgqKgKCgKSgQlghJBiaBEUCIoEZQISgQlgkLGZEvZ2mw5W5etZJsT3OToMzn8TOZR5lHmUeZR5lHmESKaloJxtWEJ7RTbpaY8nk/zvMT5H0UmlZ633Wk+nqf74+VwuJt+7A6X6z99f9sdr/a8O6Vvzd00H1+STcCv+8O8/PVx99vbtF01UnaOlqu7tWv9gwvZP6jZ4l/GHqh6y+rRB83eaUFa7q7tbslLBlhSv4XgKRaCt2HDFIiLAiRbJEghVf1ty1/b/t6UCXjhln8c1rBHSH6FYJm2ENatQk8FqSqE5hyIb5dHpMXfGrslDKRqaJrLuIRKO5FLHIXYXAMKw4HQRayLhC5iXSh0lYilpKmRLQClIoRycy2tvV0wWeaigbgNwWQpVP+mAlY60WhCmUHaGtsIPxxOXcS6cOoi1oVTVwviWLWQ5kT4hps0m+LPdktxSVOv/s3iwp3qSNbXXYqpOQQe36u7iHXxwOP7fVcLrqMg9tpE6LgWOq6F3lYL58pEyLVLVR/hXUVoM7Tc6N7dHYNwqE1Yu2I6uWGKSxkBi25IcQ5lITj6Df6OSolwvKUNdq5sWWKacSDdBqp2UBRtUwKh4bTqItalVRexLq26WkSuORG1PQoZ10LGtZCbapHa6ToR45q7l8TB3OyPwdVpGN+chqfb1Qfh4i+umRy+U+NsqF2tDew3IbSWSavalkGGGwk/3lj68cbSjzeWXS3WNRLBDGvRRazToov4BC3WdQHBDWZYdwzruoDgR8fQS7FI9Rwhth8++whfFzTqRoTY34hmzVUz/ASp49u5jm/nOr6dd7VY9wSpcsPAYlOXlE34e0kf0rvd8/70zwUZuevljU3cdC6+7EC8dHrpsiOZlAayHD+m64ZkEjwdiS9NaDphDymP0gH7dc1+7E773dNhXpjLr16Oz+Un0tvzz7fyTbmlezu9Ps8vl9O8DOePq7r0+iVFduCHeqW0fERpeci6h49lHr8A",
  "file_map": {
    "22": {
      "source": "pub mod hash;\npub mod aes128;\npub mod array;\npub mod slice;\npub mod ecdsa_secp256k1;\npub mod ecdsa_secp256r1;\npub mod embedded_curve_ops;\npub mod field;\npub mod collections;\npub mod compat;\npub mod convert;\npub mod option;\npub mod string;\npub mod test;\npub mod cmp;\npub mod ops;\npub mod default;\npub mod prelude;\npub mod runtime;\npub mod meta;\npub mod append;\npub mod mem;\npub mod panic;\npub mod hint;\n\nuse convert::AsPrimitive;\n\n// Oracle calls are required to be wrapped in an unconstrained function\n// Thus, the only argument to the `println` oracle is expected to always be an ident\n#[oracle(print)]\nunconstrained fn print_oracle<T>(with_newline: bool, input: T) {}\n\nunconstrained fn print_unconstrained<T>(with_newline: bool, input: T) {\n    print_oracle(with_newline, input);\n}\n\npub fn println<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(true, input);\n    }\n}\n\npub fn print<T>(input: T) {\n    // Safety: a print statement cannot be constrained\n    unsafe {\n        print_unconstrained(false, input);\n    }\n}\n\npub fn verify_proof<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n) {\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, 0);\n}\n\npub fn verify_proof_with_type<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {\n    if !crate::runtime::is_unconstrained() {\n        crate::assert_constant(proof_type);\n    }\n    verify_proof_internal(verification_key, proof, public_inputs, key_hash, proof_type);\n}\n\n#[foreign(recursive_aggregation)]\nfn verify_proof_internal<let N: u32, let M: u32, let K: u32>(\n    verification_key: [Field; N],\n    proof: [Field; M],\n    public_inputs: [Field; K],\n    key_hash: Field,\n    proof_type: u32,\n) {}\n\n// Asserts that the given value is known at compile-time.\n// Useful for debugging for-loop bounds.\n#[builtin(assert_constant)]\npub fn assert_constant<T>(x: T) {}\n\n// Asserts that the given value is both true and known at compile-time.\n// The message can be a string, a format string, or any value, as long as it is known at compile-time\n#[builtin(static_assert)]\npub fn static_assert<let N: u32, T>(predicate: bool, message: T) {}\n\n#[deprecated(\"wrapping operations should be done with the Wrapping traits. E.g: x.wrapping_add(y)\")]\npub fn wrapping_add<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() + y.as_())\n}\n#[deprecated(\"wrapping operations should be done with the Wrapping traits. E.g: x.wrapping_sub(y)\")]\npub fn wrapping_sub<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    //340282366920938463463374607431768211456 is 2^128, it is used to avoid underflow\n    AsPrimitive::as_(x.as_() + 340282366920938463463374607431768211456 - y.as_())\n}\n#[deprecated(\"wrapping operations should be done with the Wrapping traits. E.g: x.wrapping_mul(y)\")]\npub fn wrapping_mul<T>(x: T, y: T) -> T\nwhere\n    T: AsPrimitive<Field>,\n    Field: AsPrimitive<T>,\n{\n    AsPrimitive::as_(x.as_() * y.as_())\n}\n\n#[builtin(as_witness)]\npub fn as_witness(x: Field) {}\n\nmod tests {\n    use super::ops::arith::WrappingMul;\n\n    #[test(should_fail_with = \"custom message\")]\n    fn test_static_assert_custom_message() {\n        super::static_assert(1 == 2, \"custom message\");\n    }\n\n    #[test]\n    fn test_wrapping_mul() {\n        let zero: u128 = 0;\n        let one: u128 = 1;\n        let two_pow_64: u128 = 0x10000000000000000;\n        let u128_max: u128 = 0xffffffffffffffffffffffffffffffff;\n\n        // 1*0==0\n        assert_eq(zero, zero.wrapping_mul(one));\n\n        // 0*1==0\n        assert_eq(zero, one.wrapping_mul(zero));\n\n        // 1*1==1\n        assert_eq(one, one.wrapping_mul(one));\n\n        // 0 * ( 1 << 64 ) ==  0\n        assert_eq(zero, zero.wrapping_mul(two_pow_64));\n\n        // ( 1 << 64 ) * 0 == 0\n        assert_eq(zero, two_pow_64.wrapping_mul(zero));\n\n        // 1 * ( 1 << 64 ) == 1 << 64\n        assert_eq(two_pow_64, two_pow_64.wrapping_mul(one));\n\n        // ( 1 << 64 ) * 1 == 1 << 64\n        assert_eq(two_pow_64, one.wrapping_mul(two_pow_64));\n\n        // ( 1 << 64 ) * ( 1 << 64 ) == 1 << 64\n        assert_eq(zero, two_pow_64.wrapping_mul(two_pow_64));\n        // -1 * -1 == 1\n        assert_eq(one, u128_max.wrapping_mul(u128_max));\n    }\n}\n",
      "path": "std/lib.nr"
    },
    "50": {
      "source": "use std::mem::array_refcount;\n\nfn main() {\n    let mut array = [0, 1, 2];\n    assert_refcount(array, 1, true);\n\n    borrow(array, array_refcount(array));\n    borrow_mut(&mut array, array_refcount(array));\n    let _ = copy_mut(array, array_refcount(array));\n\n    borrow_mut_two(&mut array, &mut array, array_refcount(array));\n\n    let mut u32_array = [0, 1, 2];\n    let rc1 = array_refcount(array);\n    let rc2 = array_refcount(u32_array);\n    borrow_mut_two_separate(&mut array, &mut u32_array, rc1, rc2);\n\n    // Safety: test\n    regression_7297();\n}\n\nfn borrow(array: [Field; 3], rc_before_call: u32) {\n    assert_refcount(array, rc_before_call, true);\n    println(array[0]);\n}\n\nfn borrow_mut(array: &mut [Field; 3], rc_before_call: u32) {\n    assert_refcount(*array, rc_before_call, true);\n    array[0] = 3;\n    println(array[0]);\n}\n\n// Returning a copy of the array, otherwise the SSA can end up optimizing away\n// the `array_set`, with the whole body just becoming basically `println(4);`.\nfn copy_mut(mut array: [Field; 3], rc_before_call: u32) -> [Field; 3] {\n    assert_refcount(array, rc_before_call, true);\n    array[0] = 4;\n    println(array[0]);\n    array\n}\n\nfn borrow_mut_two(array1: &mut [Field; 3], array2: &mut [Field; 3], rc_before_call: u32) {\n    assert_refcount(*array1, rc_before_call, true);\n    assert_refcount(*array2, rc_before_call + 1, true); // array should be copied from previous dereference\n    array1[0] = 5;\n    array2[0] = 6;\n    println(array1[0]); // array1 & 2 alias, so this should also print 6\n    println(array2[0]);\n}\n\n/// Borrow a different array: we should be able to reason that these types cannot be mutably\n/// aliased since they're different types so we don't need any inc_rc instructions.\nfn borrow_mut_two_separate(\n    array1: &mut [Field; 3],\n    array2: &mut [u32; 3],\n    rc_before_call1: u32,\n    rc_before_call2: u32,\n) {\n    assert_refcount(*array1, rc_before_call1, true);\n    assert_refcount(*array2, rc_before_call2, true);\n    array1[0] = 7;\n    array2[0] = 8;\n    println(array1[0]);\n    println(array2[0]);\n}\n\nfn assert_refcount<T>(array: [T; 3], mut expected: u32, expect_copy: bool) {\n    let count = array_refcount(array);\n\n    if expect_copy {\n        expected += 1;\n    }\n\n    // All ref counts are zero when running this as a constrained program\n    if std::runtime::is_unconstrained() {\n        if count != expected {\n            // Brillig doesn't print the actual & expected arguments on assertion failure\n            println(f\"actual = {count}, expected = {expected}\");\n        }\n        assert_eq(count, expected);\n    } else {\n        assert_eq(count, 0);\n    }\n}\n\nfn regression_7297() {\n    let mut array = [0, 1, 2];\n\n    let refcount_0 = array_refcount(array);\n\n    // This is currently copying the array due to the inc_rc in the array_refcount call above\n    borrow_mut_two(&mut array, &mut array, refcount_0);\n\n    let refcount_1 = array_refcount(array);\n    let array_2 = copy_mut(array, refcount_1 + 1); // array was just copied on the previous line\n    let refcount_2 = array_refcount(array);\n\n    // Mutation of the original could occur if we double decremented the RC and then went back to 1 by accident.\n    // For this to come out we have to run the test with `--inliner-aggressiveness -9223372036854775808`\n    assert_eq(array[0], 6, \"the original should not be mutated by copy_mut, only borrow_mut_two\");\n    assert_eq(array_2[0], 4, \"the copy should have the expected content\");\n\n    if std::runtime::is_unconstrained() {\n        // Double decrementing the RC could occur if we don't realize that array mutation made a copy,\n        // which decreases the RC of the original and sets the new one to 1.\n        // This assertion is redundant with the one following it, but it's here because `assert_eq` doesn't print\n        // what actual values that cause it to fail, so this is a way to highlight the bug about the refcount of\n        // still live arrays going to zero, without any doubt that it's just not 1, as it should be.\n        assert(\n            refcount_1 != 0,\n            \"borrow_mut_two should create a fresh array and not decrease its RC\",\n        );\n\n        // `5` here is higher than in other inliner settings. This is likely due to references getting optimized out,\n        // and mutations being optimized and removed so the original array ends up being aliased more.\n        assert_eq(\n            refcount_1,\n            5,\n            \"There is 1 clone after `borrow_mut_two` and before `refcount_1` is defined (cloned before array_refcount call)\",\n        );\n        assert_eq(\n            refcount_2,\n            refcount_1 + 3,\n            \"after refcount_1 we clone once in passing array to copy_mut, once to array_refcount after, and once within copy_mut\",\n        );\n    }\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "print_unconstrained",
    "print_unconstrained"
  ]
}
